Добавляем механизм валидации DTO на базе AspectJ 1. Добавил в build.gradle зависимость на AspestJ 2. Добавил интерфейс валидации Validator 3. Добавил CreatedPersonValidator для валидации DTO в запросе на создание персоны 4. Добавил ValidationAspect реализующий вызов валидаторов на базе AspectJ 5. Добавил исключение ModelValidationException при валидации DTO
