# src/main/java/ru/ssv/delphin/controller/PersonController.java
@@ -8,7 +8,9 @@ import ru.ssv.delphin.api.model.Person;
 import ru.ssv.delphin.api.model.PersonResponse;
 import ru.ssv.delphin.api.model.PersonsResponse;
 import ru.ssv.delphin.api.model.TasksResponse;
+import ru.ssv.delphin.aspect.Validation;
 import ru.ssv.delphin.service.PersonService;
+import ru.ssv.delphin.validator.impl.CreatedPersonValidator;
 
 import static org.springframework.http.HttpStatus.CREATED;
 import static org.springframework.http.HttpStatus.OK;
@@ -40,7 +42,7 @@ public class PersonController implements PersonsApi {
     }
 
     @Override
-    public ResponseEntity<PersonResponse> savePerson(Person person) {
+    public ResponseEntity<PersonResponse> savePerson(@Validation(type = CreatedPersonValidator.class) Person person) {
         return ResponseEntity
                 .status(CREATED)
                 .body(personService.savePerson(person));
